--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,6 +18,10 @@ updates:
       - "gopal-deshmane-amla/github-repo"
 
     vulnerability-alerts:
-     schedule:
-      interval: "weekly"
-       day-of-week: [4] 
+  - package-ecosystem: nuget
+    directory: "github-repo"
+    schedule:
+      interval: "weekly"  # Change to monthly for vulnerability updates
+    target-branch: "main"
+    reviewers:
+      - "gopal-deshmane-amla/github-repo"
