--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,7 @@
 version: 2
 updates:
   - package-ecosystem: nuget
-    directory: "github-repo/packages.config/"
+    directory: "/"
     schedule:
       interval: "monthly"
       months: [1, 4, 7, 10] 
