--- a/packages.config
+++ b/packages.config
@@ -3,6 +3,6 @@
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net461" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net461" />
-  <package id="NUnit" version="3.12.0" targetFramework="net461" />
+  <package id="" version="3.12.0" targetFramework="net461" />
   <package id="Moq" version="4.16.1" targetFramework="net461" />
 </packages>
