--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,10 +1,10 @@
 version: 2
 updates:
   - package-ecosystem: nuget
-    directory: "/"
+    directory: "Projects/project.ad/packages.config/"
     schedule:
         interval: "daily"
         # day: "wednesday"
-        time: "16:57"
+        time: "18:03"
     open-pull-requests-limit: 2
 
