--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,6 @@ updates:
     schedule:
         interval: "daily"
         # day: "wednesday"
-        time: "18:31"
-    # open-pull-requests-limit: 2
+        time: "18:59"
+     open-pull-requests-limit: 5
 
