--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,1 +1,9 @@
 
+version: 2
+updates:
+  - package-ecosystem: nuget
+    directory: "Projects/project.ad/packages.config/"
+    schedule:
+        interval: "daily"
+        # day: "wednesday"
+        time: "19:25"
