--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,7 @@
 
 version: 2
 updates:
-  - package-ecosystem: "" # See documentation for possible values
+  - package-ecosystem: "nuget" # See documentation for possible values
     directory: "Projects/project.ad/packages.config/" # Location of package manifests
     schedule:
         interval: "daily"
