--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,7 +8,7 @@ updates:
   - package-ecosystem: "nuget" # See documentation for possible values
     directory: "Projects/project.ad/packages.config/" # Location of package manifests
     schedule:
-      interval: "weekly"
+      interval: "daily"
         # day: "wednesday"
     target-branch: "main"
     reviewers:
@@ -18,7 +18,7 @@ updates:
     directory: "Projects/"    
     schedule:
       interval: "daily"
-      time: "01:13"
+      time: "13:32"
     target-branch: "main"
       
       
